primeiro commit do dia, inicio dos estudos: 14:20
aprendendo try e catch

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
+        "estrutura-repeticao",
         "controle-fluxo",
-        "estrutura-repeticao"
+        "estruturar-excepcionais"
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
